# auth/adapter/controller/reissuance.go
@@ -8,16 +8,17 @@ import (
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
-// @Summary Logout
-// @Description 로그아웃
+// @Summary Ressuance Login Access Token
+// @Description Login Access Token 재발급
 // @Tags Authentication
 // @Accept json
 // @Produce json
-// @Success 200 {string} logout
+// @Success 200 {object} dto.CreateLoginAccessToken
+// @Failure 401 {string} authentication error
 // @Failure 422 {string} input param error
 // @Failure 500 {string} internal servier error
-// @Router /logout [post]
-func (ctl *Controller) Logout(c *gin.Context) {
+// @Router /reissuance [post]
+func (ctl *Controller) RessuanceLogin(c *gin.Context) {
 	refreshCookie, err := c.Request.Cookie(ctl.config.Cookie().Name())
 	if err != nil {
 		c.JSON(http.StatusUnprocessableEntity, "")
@@ -30,12 +31,14 @@ func (ctl *Controller) Logout(c *gin.Context) {
 		return
 	}
 
-	refreshTokenId := dto.DeleteTokenId{Id: objectId}
-	if utilErr := ctl.uc.DeleteRefreshToken(&refreshTokenId); utilErr != nil {
+	loginTokenParam := dto.ReadLoginTokenParam{Id: objectId}
+	loginToken, utilErr := ctl.uc.RessuanceLogin(&loginTokenParam)
+	if utilErr != nil {
 		c.JSON(utilErr.Code, "")
 		return
 	}
 
-	ctl.setCookie(c, "")
-	c.JSON(http.StatusOK, "logout")
+	ctl.setCookie(c, loginToken.RefreshTokenId)
+
+	c.JSON(http.StatusOK, loginToken.AccessToken)
 }
