# auth/dto/token.go
@@ -4,7 +4,6 @@ import (
 	"time"
 
 	"github.com/dgrijalva/jwt-go/v4"
-	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
 type CreateLoginTokenParam struct {
@@ -20,19 +19,15 @@ type LoginTokenCliams struct {
 }
 
 type LoginToken struct {
-	AccessToken    *LoginAccessToken
+	AccessToken    *CreateLoginAccessToken
 	RefreshTokenId string
 }
 
-type LoginAccessToken struct {
+type CreateLoginAccessToken struct {
 	Token string `json:"token"`
 }
 
-type LoginRefreshToken struct {
+type CreateLoginRefreshToken struct {
 	Token      string    `bson:"token"`
 	Expiration time.Time `bson:"expiration"`
-}
-
-type DeleteTokenId struct {
-	Id primitive.ObjectID `bson:"_id"`
 }
